# GPT-SoVITS

./: pyproject.toml
GPT_SoVITS/: infra_http_service.py
